--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "ajv": "^6.5.1",
+        "ajv-keywords": "^3.2.0"
     }
 }
